bk_ida/gccida/g1/wrap_constant
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wrap_constant/src/cselib.c:1002:21: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  wrap_constant( machine_mode mode, rtx x) 
                    ^
                    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wrap_constant/src/cselib.c:1007:30: error: use of undeclared identifier 'insn'
fancy_abort( ( const char *)&insn, 548, "wrap_constant"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wrap_constant/src/obj/cselib.o] Error 1
